--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Ilker Birbil"
 description              : &description "Webpage of Ilker Birbil. Professor of AI & Optimization Tecnhiques in Business and Society in University of Amsterdam (UvA)."
-url                      : https://sibirbil.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sibirbil.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sibirbil/sibirbil.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "sibirbil"
   google_plus      :
   keybase          :
   instagram        :
