--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /teaching/    
     
   - title: "Team"
-    url: /teams/
+    url: /team/
         
   - title: "Projects"
     url: /projects/
