--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Software"
-    url: /software/
+  - title: "SW & DS"
+    url: /swds/
 
   - title: "Talks"
     url: /talks/
