--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Amsterdam"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=aRzaChQAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=ijGH_u4AAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
