--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://nl.linkedin.com/in/ilker-birbil-7591a2152"
   orcid            : "https://orcid.org/0000-0001-7472-7032"
   pinterest        :
   soundcloud       :
